            would overwrite random memory, causing garbage output 
            and perhaps arbitrarily bizarre behaviour.
      \item Fixed a bug where LC_PAPER was not correctly set at startup.
      \item **20
      \item Fixed gc.time, which was producing grossly incorrect values
            for user and system time.
      \item **22
      \item **23
      \item **24
      \item Fixed a bug where excess warning messages may be produced
            on conversion to RAW.  For instance:
\preformatted{
  > as.raw(1e40)
  [1] 00
  Warning messages:
  1: NAs introduced by coercion 
  2: out-of-range values treated as 0 in coercion to raw 
}
            Now, only the second warning message is produced.
      \item **26
      \item A bug has been fixed in which rbind would not handle 
            non-vector objects such as function closures, whereas
            cbind did handle them, and both were documented to do so.
      \item **28
      \item Fixed a bug in vapply illustrated by the following:
\preformatted{
   X<-list(456)
   f<-function(a)X
   A<-list(1,2)  
   B<-vapply(A,f,list(0))
   print(B)
   X[[1]][1]<-444
   print(B)
}
            After the fix, the values in \code{B} are no long changed by the 
            assignment to \code{X}. Similar bugs in mapply, eapply, and rapply 
            have also been fixed.  I reported these bugs to r-devel, and
            (different) fixes are in R-3.0.0 and later versions.
      \item Fixed a but in rep.int illustrated by the following:
\preformatted{
   a<-list(1,2)
   b<-rep.int(a,c(2,2))
   b[[1]][1]<-9
   print(a[[1]])
}
      \item Fixed a bug in mget, illustrated by the following code:
\preformatted{
   a <- numeric(1)
   x <- mget("a",as.environment(1))
   print(x)
   a[1] <- 9
   print(x)
}
      \item Fixed bugs that the R Core Team fixed (differently) for R-2.13.3,
            illustrated by the following:
\preformatted{
   a <- list(c(1,2),c(3,4))
   b <- list(1,2,3)
   b[2:3] <- a
   b[[2]][2] <- 99