@@ -148,7 +148,7 @@ SEXP do_classgets(SEXP, SEXP, SEXP, SEXP);
 SEXP do_clip(SEXP, SEXP, SEXP, SEXP);
 SEXP do_colon(SEXP, SEXP, SEXP, SEXP, int);
 SEXP do_colors(SEXP, SEXP, SEXP, SEXP);
-SEXP do_colsum(SEXP, SEXP, SEXP, SEXP);
+SEXP do_colsum(SEXP, SEXP, SEXP, SEXP, int);
 SEXP do_col2RGB(SEXP, SEXP, SEXP, SEXP);
 SEXP do_commandArgs(SEXP, SEXP, SEXP, SEXP);
 SEXP do_comment(SEXP, SEXP, SEXP, SEXP);
